[project]
name = "project-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.3",
    "langchain-experimental>=0.3.2",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.3",
    "matplotlib>=3.9.2",
    "openai>=1.52.0",
    "pandas>=2.2.3",
    "streamlit>=1.39.0",
    "tabulate>=0.9.0",
]
